--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HELLO</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
+<div class="header"> 
+    <h1>Добро пожаловать на мой сайт мини-игр</h1>  
+    <h2>Тебе предстоит пройти несколько увлекательных игр. Если готов, нажимай «Поехали!» и приступай.</h2>
+    <button class="button">Поехали!</button>
+</div>
 <body>
-    <h1>HELLO WORLD</h1>
+
 </body>
 </html>
